Finish the haomepage styling

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
       type="image/png"
       href="./src/assets/images/gbac_favicon.png"
     />
+
+    <!-- Flowbite JS script -->
+    <script src="https://unpkg.com/flowbite@latest/dist/flowbite.js"></script>
+
+    <!-- Vara.js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/vara@1.4.0/lib/vara.min.js"
+      type="text/javascript"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | GBAC Sports</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- Flowbite JS script -->
-    <script src="https://unpkg.com/flowbite@latest/dist/flowbite.js"></script>
   </body>
 </html>
