--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/flowbite@latest/dist/flowbite.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | GBAC Sports</title>
+    <title>Loading...</title>
   </head>
   <body>
     <div id="root"></div>
